--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>For My Love ❤️</title>
 
   <style>
@@ -10,231 +10,315 @@
       margin: 0;
       font-family: "Poppins", sans-serif;
       background: linear-gradient(to bottom right, #ffb6c1, #ffe4e1);
-      height: 100vh;
-      overflow-x: hidden;
       text-align: center;
+      overflow-x: hidden;
     }
 
     h1 {
-      color: #ff2e63;
       margin-top: 25px;
-      font-size: 2.6em;
+      color: #ff2e63;
+      font-size: 2.8em;
+      cursor: pointer;
     }
 
     .card {
       background: white;
-      margin: 30px auto;
+      margin: 25px auto;
       padding: 30px;
       border-radius: 30px;
-      max-width: 650px;
+      max-width: 850px;
       box-shadow: 0 15px 40px rgba(0,0,0,0.25);
-      animation: fadeIn 2s ease;
-      position: relative;
-      z-index: 10;
-    }
-
-    p {
-      font-size: 1.15em;
-      color: #444;
-      line-height: 1.7;
+      animation: fadeIn 1.8s ease;
     }
 
     button {
       margin-top: 20px;
-      padding: 12px 28px;
+      padding: 14px 32px;
       border: none;
-      border-radius: 25px;
+      border-radius: 30px;
       background: #ff2e63;
       color: white;
-      font-size: 1em;
+      font-size: 1.05em;
       cursor: pointer;
       transition: 0.3s;
     }
 
     button:hover {
+      transform: scale(1.08);
       background: #d81b47;
-      transform: scale(1.07);
     }
 
+    button:disabled {
+      background: gray;
+      cursor: not-allowed;
+    }
+
+    /* ✅ FORCE HIDE */
     .hidden {
+      display: none !important;
+    }
+
+    /* Typewriter */
+    #typeText {
+      font-size: 1.2em;
+      color: #444;
+      margin-top: 25px;
+      min-height: 120px;
+      line-height: 1.7;
+      white-space: pre-line;
+    }
+
+    /* Countdown */
+    #countdownBox {
+      margin-top: 25px;
+      padding: 18px;
+      border-radius: 20px;
+      background: #fff0f5;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+    }
+
+    #countdown {
+      font-size: 1.3em;
+      font-weight: bold;
+      color: #ff2e63;
+    }
+
+    /* Gallery */
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 15px;
+      margin-top: 25px;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+      border: 3px solid #ff4d6d;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+
+    /* Popup fullscreen */
+    .popup {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.75);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
       display: none;
     }
 
-    /* Slideshow */
-    .slideshow {
-      width: 100%;
-      max-width: 400px;
-      height: 280px;
-      margin: 20px auto;
-      border-radius: 20px;
-      overflow: hidden;
-      border: 5px solid #ff4d6d;
-    }
-
-    .slideshow img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    /* Video */
-    video {
-      width: 100%;
-      max-width: 500px;
-      border-radius: 20px;
-      margin-top: 20px;
-      border: 4px solid #ff4d6d;
+    .popup img {
+      max-width: 80%;
+      max-height: 80%;
+      border-radius: 25px;
+      border: 5px solid white;
     }
 
     /* Floating hearts */
     .heart {
       position: absolute;
-      color: #ff2e63;
-      font-size: 20px;
+      font-size: 22px;
       animation: floatUp 6s linear infinite;
+      color: #ff2e63;
     }
 
     @keyframes floatUp {
-      from {transform: translateY(100vh); opacity: 1;}
-      to {transform: translateY(-10vh); opacity: 0;}
+      from { transform: translateY(100vh); opacity: 1; }
+      to   { transform: translateY(-10vh); opacity: 0; }
     }
 
     /* Confetti */
     .confetti {
       position: absolute;
-      width: 12px;
-      height: 12px;
+      width: 10px;
+      height: 10px;
       animation: fall 3s linear infinite;
     }
 
     @keyframes fall {
-      from {transform: translateY(-10vh);}
-      to {transform: translateY(110vh);}
+      from { transform: translateY(-10vh); }
+      to   { transform: translateY(110vh); }
     }
 
     @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(30px);}
-      to {opacity: 1; transform: translateY(0);}
+      from { opacity: 0; transform: translateY(25px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 
 <body>
 
-  <!-- 🎵 Music (plays when button is clicked) -->
+  <!-- 🎵 Music -->
   <audio id="music" loop>
     <source src="nadhifb.mp3" type="audio/mpeg">
   </audio>
 
-  <h1>Hi My Love ❤️</h1>
+  <h1 id="title">Hi My Love ❤️</h1>
 
   <div class="card">
     <p>
       I made this little website just for you 🥺  
-      Because you truly mean so much to me 💕
+      Because you are truly my favorite person in this world 💕
     </p>
 
-    <!-- Slideshow (5 JPEG images) -->
-    <div class="slideshow">
-      <img id="slide" src="gambar1.jpeg" alt="Our Memories">
-    </div>
-
-    <button onclick="showSurprise()">Click for a surprise 🎁</button>
+    <button id="surpriseBtn" onclick="startSurprise()">
+      Open Your Surprise 🎁
+    </button>
 
     <!-- Love Letter -->
-    <p id="letter" class="hidden">
-      My love... ❤️  
-      Thank you for coming into my life.  
-      Every moment with you feels like a beautiful gift.  
-      <br><br>
-      You make my world brighter, my heart calmer,  
-      and my days so much happier.  
-      <br><br>
-      I love you more than you could ever imagine 😘  
-      You are truly my everything 💖
-    </p>
+    <div id="typeText" class="hidden"></div>
 
-    <!-- Video -->
-    <video id="video" class="hidden" controls>
-      <source src="video1.mp4" type="video/mp4">
-      Your browser does not support this video 😢
-    </video>
+    <!-- Countdown -->
+    <div id="countdownBox" class="hidden">
+      <h2 style="color:#ff2e63;">🎂 Countdown to Your Birthday</h2>
+      <p id="countdown"></p>
+    </div>
 
-    <!-- Valentine Button -->
-    <button id="valentineBtn" class="hidden" onclick="valentineQuestion()">
-      Will you be my Valentine? 🌹
+    <!-- ✅ Gallery Hidden HARD -->
+    <div id="gallery" class="gallery hidden" style="display:none;">
+      <img src="gambar1.jpeg" onclick="openPopup(this.src)">
+      <img src="gambar2.jpeg" onclick="openPopup(this.src)">
+      <img src="gambar3.jpeg" onclick="openPopup(this.src)">
+      <img src="gambar4.jpeg" onclick="openPopup(this.src)">
+      <img src="gambar5.jpeg" onclick="openPopup(this.src)">
+    </div>
+
+    <button id="finalBtn" class="hidden" onclick="finalLove()">
+      Will you be mine forever? 🌹
     </button>
 
     <p id="answer" class="hidden"></p>
   </div>
 
+  <!-- Popup -->
+  <div class="popup" id="popup" onclick="closePopup()">
+    <img id="popupImg">
+  </div>
+
   <script>
-    // Slideshow images
-    let images = [
-      "gambar1.jpeg",
-      "gambar2.jpeg",
-      "gambar3.jpeg",
-      "gambar4.jpeg",
-      "gambar5.jpeg"
-    ];
+    let message = `
+My love... ❤️
 
-    let index = 0;
+Thank you for existing.
+Thank you for being YOU.
 
-    // Auto slideshow every 2.5 seconds
-    setInterval(() => {
-      index = (index + 1) % images.length;
-      document.getElementById("slide").src = images[index];
-    }, 2500);
+Every picture here is a memory,
+and every memory is my favorite place.
 
-    // Surprise button function
-    function showSurprise() {
+You make my life brighter,
+my heart calmer,
+and my world complete.
 
-      // 🎵 Play music when clicked
-      let music = document.getElementById("music");
-      music.play();
+I love you endlessly 💖
+    `;
 
-      document.getElementById("letter").classList.remove("hidden");
-      document.getElementById("video").classList.remove("hidden");
-      document.getElementById("valentineBtn").classList.remove("hidden");
+    function typeWriter(text, i=0) {
+      if (i < text.length) {
+        document.getElementById("typeText").innerHTML += text.charAt(i);
+        setTimeout(() => typeWriter(text, i+1), 40);
+      }
     }
 
-    // Valentine button function
-    function valentineQuestion() {
-      document.getElementById("answer").classList.remove("hidden");
-      document.getElementById("answer").innerHTML =
-        "YAYYYY 😭💘 I love you forever and always ❤️";
+    function startSurprise() {
+
+      document.getElementById("surpriseBtn").disabled = true;
+
+      alert("🤭 Betul ke nak tahu...??");
+      alert("Yekeee 😏💕");
+      alert("HAHAHAHA okay okay last... 😭💘");
+
+      document.getElementById("music").play();
+
+      document.getElementById("typeText").classList.remove("hidden");
+      document.getElementById("countdownBox").classList.remove("hidden");
+      document.getElementById("finalBtn").classList.remove("hidden");
+
+      // ✅ SHOW gallery only now
+      let gallery = document.getElementById("gallery");
+      gallery.style.display = "grid";
+      gallery.classList.remove("hidden");
+
+      document.getElementById("typeText").innerHTML = "";
+      typeWriter(message);
 
       launchConfetti();
     }
 
-    // Floating hearts generator
+    function openPopup(src) {
+      document.getElementById("popup").style.display = "flex";
+      document.getElementById("popupImg").src = src;
+    }
+
+    function closePopup() {
+      document.getElementById("popup").style.display = "none";
+    }
+
+    function finalLove() {
+      document.getElementById("answer").classList.remove("hidden");
+      document.getElementById("answer").innerHTML =
+        "YAYYYY 😭💘 I love you forever and always ❤️";
+      launchConfetti();
+    }
+
+    // Hearts
     setInterval(() => {
       const heart = document.createElement("div");
       heart.classList.add("heart");
       heart.innerHTML = "❤️";
       heart.style.left = Math.random() * 100 + "vw";
-      heart.style.fontSize = Math.random() * 25 + 15 + "px";
       document.body.appendChild(heart);
-
       setTimeout(() => heart.remove(), 6000);
-    }, 400);
+    }, 450);
 
-    // Confetti effect
+    // Confetti
     function launchConfetti() {
-      for (let i = 0; i < 50; i++) {
+      for (let i = 0; i < 60; i++) {
         const confetti = document.createElement("div");
         confetti.classList.add("confetti");
         confetti.style.left = Math.random() * 100 + "vw";
         confetti.style.background =
-          "hsl(" + Math.random() * 360 + ", 100%, 70%)";
+          "hsl(" + Math.random() * 360 + ",100%,70%)";
         confetti.style.animationDuration =
           Math.random() * 2 + 2 + "s";
-
         document.body.appendChild(confetti);
-
         setTimeout(() => confetti.remove(), 3000);
       }
     }
+
+    // Countdown
+    function birthdayCountdown() {
+      let now = new Date();
+      let year = now.getFullYear();
+      let birthday = new Date(year, 4, 19);
+
+      if (now > birthday) birthday = new Date(year + 1, 4, 19);
+
+      let diff = birthday - now;
+
+      let days = Math.floor(diff / (1000*60*60*24));
+      let hours = Math.floor((diff / (1000*60*60)) % 24);
+      let minutes = Math.floor((diff / (1000*60)) % 60);
+      let seconds = Math.floor((diff / 1000) % 60);
+
+      document.getElementById("countdown").innerHTML =
+        `${days} Days ${hours} Hours ${minutes} Minutes ${seconds} Seconds 💖`;
+    }
+
+    setInterval(birthdayCountdown, 1000);
+    birthdayCountdown();
   </script>
 
 </body>
